[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Christopher Kruse <ckruse@ballpointcarrot.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
regex = "1.4"
once_cell = "1.5"